fix: update footer contrast

--- a/api/tracker/static/tracker/style.css
+++ b/api/tracker/static/tracker/style.css
@@ -62,10 +62,15 @@ html {
   background-color: var(--color-background-grey);
   padding: 1vw;
 }
-.footer-row {
+#footer a:link {
+  color: var(--color-catalyst-blue);
+}
+#footer a:visited {
+  color: var(--color-catalyst-blue);
 }
 .footer-item {
   display: inline-block;
+  color: var(--color-black);
   /* padding-left: 5px;
   padding-right: 5px; */
 }
